feat: complete profile sync, 5 production projects showcase, API key collection catalog, resume PDF integration, and java e2e fixes